# storecold

./: Cargo.toml  README.md  deny.toml  justfile
contrib/systemd/: storecold.config.yaml  storecold.env.example  storecold.service
src/: app.rs  cli.rs  config.rs  crypto.rs  daemon.rs  lib.rs  main.rs  manifest.rs  provider.rs  reconcile.rs  state.rs
