[package]
name = "storecold"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.89"
aws-config = "1.8.10"
aws-sdk-s3 = "1.115.0"
base64 = "0.22.1"
bytes = "1.11.0"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3.31"
globset = "0.4.16"
hex = "0.4.3"
hmac = "0.12.1"
hostname = "0.4.1"
humantime = "2.3.0"
hkdf = "0.12.4"
notify = "8.2.0"
rand = "0.9.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tempfile = "3.23.0"
time = { version = "0.3.44", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
walkdir = "2.5.0"
zeroize = "1.8.2"
azure_core = "0.33.0"
azure_identity = "0.33.0"
azure_storage_blob = "0.10.0"

[dev-dependencies]
